--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,26 @@
+- name: Install dependencies
+  run: |
+    npm install uglify-js clean-css-cli html-minifier-terser
+- name: Uglify JavaScript
+  run: |
+    find . -name "*.js" ! -name "*.min.js" | while read file; do
+      /path/to/node_modules/.bin/uglifyjs $file --compress --mangle --output ${file%.js}.min.js;
+    done
+- name: Commit and push changes
+  run: |
+    git config --global user.name 'github-actions'
+    git config --global user.email 'github-actions@github.com'
+    git add *.min.js *.min.css *.html
+    git commit -m 'Automated uglification and minification'
+    git push
+  env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+- name: Uglify JavaScript
+  run: |
+    set -e
+    find . -name "*.js" ! -name "*.min.js" | while read file; do
+      /path/to/node_modules/.bin/uglifyjs $file --compress --mangle --output ${file%.js}.min.js || exit 1;
+    done
 name: Uglify and Minify Assets
 
 on:
@@ -19,32 +42,24 @@ jobs:
         node-version: '14'
 
     - name: Install dependencies
-      run: npm install uglify-js clean-css-cli html-minifier-terser -g
+      run: |
+        npm install uglify-js clean-css-cli html-minifier-terser
 
     - name: Uglify JavaScript
       run: |
+        set -e
         find . -name "*.js" ! -name "*.min.js" | while read file; do
-          uglifyjs $file --compress --mangle --output ${file%.js}.min.js;
+          ./node_modules/.bin/uglifyjs $file --compress --mangle --output ${file%.js}.min.js || exit 1;
         done
 
     - name: Minify CSS
       run: |
+        set -e
         find . -name "*.css" ! -name "*.min.css" | while read file; do
-          cleancss -o ${file%.css}.min.css $file;
+          ./node_modules/.bin/cleancss -o ${file%.css}.min.css $file || exit 1;
         done
 
     - name: Minify HTML
       run: |
-        find . -name "*.html" | while read file; do
-          html-minifier-terser --collapse-whitespace --remove-comments --remove-redundant-attributes --use-short-doctype --minify-css true --minify-js true -o $file $file;
-        done
-
-    - name: Commit and push changes
-      run: |
-        git config --global user.name 'github-actions'
-        git config --global user.email 'github-actions@github.com'
-        git add .
-        git commit -m 'Automated uglification and minification'
-        git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        set -e
+        find
